--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -14,7 +14,9 @@
 			<trans-unit id="skip_to_main_content" resname="skip_to_main_content">
 				<source>Skip to main content</source>
 			</trans-unit>
-
+			<trans-unit id="search.placeholder" resname="search.placeholder">
+				<source>Search</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
