[TASK] rename search templates, changes to classnames, css

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -17,11 +17,8 @@
 			<trans-unit id="search.placeholder" resname="search.placeholder">
 				<source>Search</source>
 			</trans-unit>
-			<trans-unit id="search.headerTop.template" resname="search.headerTop.template">
-				<source>Header top Searchform Template</source>
-			</trans-unit>
-			<trans-unit id="search.mainNavigation.template" resname="search.mainNavigation.template">
-				<source>Main navigation Searchform Template</source>
+			<trans-unit id="searchInput.template" resname="searcHInput.template">
+				<source>Search input template</source>
 			</trans-unit>
 		</body>
 	</file>
