[FEATURE] add site header CE with big menu, lang menu, search and top menu (#269)
* [TASK] add files for big-menu element

* [TASK] fix linting, remove duplicate css styling

* [TASK] fix linting, add comment

* [TASK] change to correct locallang path

* [TASK] add search and language menu to navigation bar and header top

* [TASK] fix linting

* [TASK] fix linting

* [TASK] change template for indexedSearch, styling changes

* [TASK] npm run build

* [TASK] styling and template changes for search, language dropdown and navigation menu

* [TASK] add new search button styling and its variables, change condition for shortcuts

* [TASK] change color of search button icon

* [TASK] update big menu styling

* [TASK] change language menu to icon on mobile

* [TASK] remove trailing whitespace

* [TASK] fix linting issues

* [TASK] update language menu icon on header top

* [TASK] change search templates order of wrappers

* [TASK] change button size for search on mobile

* [TASK] add simple-site-header css file

* [TASK] change name of site-header js file, use inline

* [TASK] add awesomplete, changes to css, changes in search templates

* [TASK] change icon for site and simple site header

* [TASK] add variable for which search we are using, add if statement for awesomplete

* [TASK] fix nesting issue

* [TASK] rename search templates, changes to classnames, css

* [TASK] add missing class to input-group

* [TASK] remove commented code

* [TASK]  comment out indexed search config option

* [TASK] comment out searchInput for indexed search template

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -14,7 +14,12 @@
 			<trans-unit id="skip_to_main_content" resname="skip_to_main_content">
 				<source>Skip to main content</source>
 			</trans-unit>
-
+			<trans-unit id="search.placeholder" resname="search.placeholder">
+				<source>Search</source>
+			</trans-unit>
+			<trans-unit id="searchInput.template" resname="searcHInput.template">
+				<source>Search input template</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
