--- a/Resources/Private/Language/ContentElements/locallang_csh_sfr.xlf
+++ b/Resources/Private/Language/ContentElements/locallang_csh_sfr.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Context help for sys_file_reference field -->
-<xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
 	<file source-language="en" datatype="plaintext" original="EXT:t3kit/Resources/Private/Language/ContentElements/locallang_csh_sfr.xlf" date="2019-04-20UTC12:53:470" product-name="context_help">
 		<header/>
 		<body>
