--- a/Resources/Private/Language/Page/locallang.xlf
+++ b/Resources/Private/Language/Page/locallang.xlf
@@ -2,7 +2,7 @@
 <!-- Beck-End Pages translations -->
 <!-- Configuration/TCA/Overrides -->
 <!-- 10_pages.php -->
-<xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
 	<file source-language="en" datatype="plaintext" original="EXT:t3kit/Resources/Private/Language/Page/locallang.xlf" date="2019-04-20UTC12:53:470" product-name="t3kit">
 		<header/>
 		<body>
